# testbox

./: .gitignore  LICENSE  README.rst  pyproject.toml  testbox.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
environments/dev.example/ansible/: hosts.yaml  secrets.yaml
environments/dev.example/ansible/group_vars/: all.yaml  example_group.yaml
environments/dev.example/k8s/gitea/: values.yaml
roles/common/tasks/: ubuntu.yaml
roles/hardened/handlers/: main.yaml
roles/hardened/tasks/: ubuntu.yaml
roles/hardened/templates/: journald.conf.j2  sshd_config.j2
roles/microk8s/tasks/: ubuntu.yaml
roles/nftables/handlers/: main.yaml
roles/nftables/tasks/: main.yaml  ubuntu.yaml
roles/nftables/templates/: nftables.conf.j2
roles/troubleshooting/tasks/: ubuntu.yaml
roles/unattended_upgrades/handlers/: main.yaml
roles/unattended_upgrades/tasks/: ubuntu.yaml
roles/unattended_upgrades/templates/: 50unattended-upgrades.j2
